--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Twilo - Write, Share, Inspire.</title>
+    <title>Twilo - Write. Share. Explore. Connect.</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <meta
       name="description"
-      content="Twilo is your go-to platform for effortless blogging. Share your thoughts, ideas, and stories with a community of readers. Whether you're writing for fun or building an audience, Twilo makes it easy to get started and grow."
+      content="Twilo is your go-to platform for seamless blogging. Share your stories, ideas, and creativity with a vibrant community of readers and writers. Whether you're writing for fun, exploring fresh perspectives, or building your audience, Twilo makes it simple to grow and connect."
     />
     <meta name="author" content="Mohammad Bilal Mansuri" />
     <link rel="author" href="https://github.com/mohammadbilalmansuri" />
@@ -25,7 +25,7 @@
   >
     <div
       id="root"
-      class="w-full relative overflow-x-hidden overflow-y-auto min-h-dvh flex flex-col items-center justify-between"
+      class="w-full relative overflow-x-hidden overflow-y-auto min-h-dvh"
     ></div>
 
     <script type="module" src="/src/main.jsx"></script>
