--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       content="twilo, twilo blogs, twilo posts, blogs, posts, blogging, appwrite, react, social media, social"
     />
   </head>
-  <body class="bg-white text-black w-full relative flex flex-col items-center">
+  <body class="bg-white text-black w-full relative">
     <div
       id="root"
       class="w-full relative overflow-x-hidden overflow-y-auto min-h-dvh"
