--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Twilo - Write. Share. Explore. Connect.</title>
+    <title>Twilo: Bring Your Stories and Ideas to Life</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <meta
       name="description"
-      content="Twilo is your go-to platform for seamless blogging. Share your stories, ideas, and creativity with a vibrant community of readers and writers. Whether you're writing for fun, exploring fresh perspectives, or building your audience, Twilo makes it simple to grow and connect."
+      content="Twilo is your go-to platform for easy blogging. Share your stories, ideas, and creativity with a lively community of readers. Whether you're writing for fun, exploring new ideas, or growing your audience, Twilo makes it easy to succeed."
     />
     <meta name="author" content="Mohammad Bilal Mansuri" />
     <link rel="author" href="https://github.com/mohammadbilalmansuri" />
@@ -17,7 +17,7 @@
     />
     <meta
       name="keywords"
-      content="twilo, twilo blogs, twilo posts, blogs, posts, blogging, appwrite, react, social media, social"
+      content="twilo, twilo blogs, twilo posts, blogs, posts, blogging, appwrite, react, social media, social, writers, content creation, online community, publish, creative writing"
     />
   </head>
   <body class="bg-white text-black w-full relative">
