--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body class="bg-white text-black w-full relative">
     <div
       id="root"
-      class="w-full relative overflow-x-hidden overflow-y-auto min-h-dvh flex flex-col"
+      class="w-full relative overflow-x-hidden overflow-y-auto min-h-screen flex flex-col"
     ></div>
 
     <script type="module" src="/src/main.jsx"></script>
